# cbr-web-components

./: .gitmodules  README.md  karma.conf.cjs  package-lock.json  package.json  pyproject.toml  run-karma.sh  wallaby.cjs  wallaby.js
.github/actions/run-qunit-tests/: action.yml
.github/actions/s3_publish-files/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
cbr_web_components/: version
cbr_web_components/js/cbr/: CBR_User_Data.mjs
cbr_web_components/js/chat-bots/: Chatbot_OpenAI.js  Chatbot_OpenAI.mjs
cbr_web_components/js/core/: B.mjs  BR.mjs  Div.js  HR.mjs  Html.mjs  Img.mjs  Pre.mjs  Span.mjs  Svg.mjs  Svg__Icons.mjs  Table.js  Table.mjs  Tag.js  Tag.mjs  Text.js  Text.mjs  WebC__Container.mjs  Web_Component.js  Web_Component.mjs
cbr_web_components/js/data/: API__Invoke.mjs
cbr_web_components/js/elements/: WebC__Browser_Params.mjs  WebC__Chat_Bot.js  WebC__Chat_Bot.mjs  WebC__Chat_Input.js  WebC__Chat_Input.mjs  WebC__Chat_Message.js  WebC__Chat_Message.mjs  WebC__Chat_Messages.js  WebC__Chat_Messages.mjs  WebC__Form_Input.mjs  WebC__Save_Chat.mjs
cbr_web_components/js/events/: Events__Dispatch.mjs  Events__Receive.mjs  Events__Utils.mjs
cbr_web_components/js/plugins/: Text_Highlight.mjs
cbr_web_components/js/ui-components/: UI__Session_Data.mjs  WebC__API_To_Json.mjs
cbr_web_components/js/utils/: Load_Libraries__CSS.mjs  WebC__Events_Utils.js  WebC__Events_Utils.mjs  WebC__Events_Viewer.js  WebC__Events_Viewer.mjs  WebC__Target_Div.js  WebC__Target_Div.mjs
cbr_web_components/qunit/core/: Div.qunit.js  H.qunit.js  (+4 more)
(+49 files in other folders)
