[tool.poetry]
name        = "cbr_web_components"
version     = "v0.12.22"
description = "CBR - Web Components"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-web-components"
repository  = "https://github.com/the-cyber-boardroom/cbr-web-components"

[tool.poetry.dependencies]
python          = "^3.7"
osbot-utils     = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
